--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="traefikproxy.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script defer data-domain="mercy-software-services.netlify.app" src="https://plausible.io/js/script.file-downloads.hash.outbound-links.tagged-events.js"></script>
+<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+
     <meta
       name="description"
       content="Instagram Link Manager - Share and organize Instagram links"
